--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,7 @@
 	width: 85%;
 }
 .main-area {
-	width: 75%;
+	width: 95%;
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -49,10 +49,9 @@
 	background-color: lightgrey;
 	border-color: darkslategrey;
 	border: 2px solid;
-
 	display: flex;
-	width: 25vw;
-	height: 25vw;
+	width: 90%;
+	height: 40%;
 	justify-content: stretch;
 	justify-items: stretch;
 }
@@ -90,7 +89,7 @@
 	justify-content: space-evenly;
 }
 .version {
-	width: 15%;
+	width: 25%;
 	margin: 5px;
 	padding: 4px;
 	background-color: linen;
@@ -99,7 +98,7 @@
 	background-color: mediumaquamarine;
 }
 .egg-group {
-	width: 15%;
+	width: 25%;
 	margin: 5px;
 	padding: 4px;
 	font-weight: bold;
@@ -108,7 +107,7 @@
 }
 .type-entry {
 	font-weight: bold;
-	width: 15%;
+	width: 25%;
 	margin: 5px;
 	padding: 4px;
 }
